src/objects/KS_Soluci_n_prescrita_competencia__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto para almacenar las soluciones prescritas por Competidores</description>
    <fields>
        <fullName>KS_Competidor__c</fullName>
        <formula>KS_Producto_de_competidor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competidor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Fabricante__c</fullName>
        <formula>KS_Producto_de_competidor__r.KS_Fabricante__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabricante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Soluciones prescritas competencia</relationshipLabel>
        <relationshipName>Soluciones_prescritas_competencia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Producto_de_competidor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto de competidor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Productos de competidores</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Soluciones prescritas competencia</relationshipLabel>
        <relationshipName>Soluciones_prescritas_competencia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Serie__c</fullName>
        <formula>KS_Producto_de_competidor__r.KS_Serie_competidor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serie</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Solucion__c</fullName>
        <formula>TEXT(KS_Producto_de_competidor__r.KS_Soluci_n_competidor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solución</label>
        <type>Text</type>
    </fields>
    <label>Solución prescrita competencia</label>
    <nameField>
        <displayFormat>SPC-{000000}</displayFormat>
        <label>SPC-id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Soluciones prescritas competencia</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>